add more css styling

--- a/index.html
+++ b/index.html
@@ -7,11 +7,29 @@
   <body>
     <div class="sidebar">
       <h2>Shows</h2>
-      <ol>
+      <ul>
         <li><a href="http://www.example.com">First band</a></li>
         <li><a href="http://www.example.com">Second band</a></li>
-        <li><a href="http://www.example.com">hird band</a></li>
-      </ol>
+        <li><a href="http://www.example.com">Third band</a></li>
+      </ul>
+      <h2>Dates</h2>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <h2>Tickets</h2>
+      <ul>
+        <li><a href="http://www.ticketcenter.com">Ticket Center</a></li>
+        <li><a href="http://www.stubhub.com">Stub Hub</a></li>
+        <li><a href="http://www.seatgeek.com">Seat Geek</a></li>
+      </ul>
+      <h2>Social Media</h2>
+      <ul>
+        <li><a href="http://www.facebook.com">Facebook</a></li>
+        <li><a href="http://www.instagram.com">Instagram</a></li>
+        <li><a href="http://www.soundcoud.com">SoundCloud</a></li>
+      </ul>
     </div>
 
     <div class="main">
@@ -19,19 +37,21 @@
 
        <div class="text">
          <h3>First band:</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+         <img src="img/band1.jpg" alt="a photo of a band">
+         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
-       <img src="img/band1.jpg" alt="a photo of a band">
+
        <div class="text">
          <h3>Second band:</h3>
+         <img src="img/band2.jpg" alt="a photo of a band">
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
-       <img src="img/band2.jpg" alt="a photo of a band">
+
        <div class="text">
          <h3>Third band:</h3>
+         <img src="img/band3.jpg" alt="a photo of a band">
          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
-       <img src="img/band3.jpg" alt="a photo of a band">
     </div>
 
   </body>
